package pl.pietruszynski.loyaltyclub.api.admin.model;

public enum TransactionState {
    PENDING,
    AVAILABLE,
    EXPIRED
}
